# Hob

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  app.py  config.py  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  calendar_eventkit.py  clock.py  data_files.py  keychain.py  launchd.py  llm_ollama.py  scheduler.py  store_sqlite.py  telegram_bot.py
core/: __init__.py  dates.py  digest.py  errors.py  explanation.py  feasibility.py  forecast.py  interpreter.py  local_time.py  models.py  planner.py  ports.py  recurrence.py  undo.py  version.py
deploy/: com.hearth.headless.plist  com.local.hob.plist
docs/: app-store.md  architecture.md  deployment.md  development.md  features.md
docs/adr/: 0001-mac-app-store-edition.md
docs/audits/: app-store-background-service.md  app-store-delivery-pipeline.md  app-store-durable-state.md  app-store-model-readiness.md  app-store-runtime-contract.md  v0.7.md  v0.8.md  v0.9.2.md  v0.9.3.md  v0.9.4.md  v0.9.5.md  v0.9.6.md  v0.9.7.md  v0.9.8.md  v0.9.9.md  v0.9.md  v1-durable-install.md  v1-grounded-explanations.md  v1-queue-recovery.md  v1-supported-model.md  (+2 more)
evals/: analysis_eval.py  interpreter_eval.py
scripts/: build_calendar_bridge.sh  setup.sh
tests/: fakes.py  test_app_store_foundation.py  test_capture.py  test_cli.py  test_config.py  test_data_files.py  test_dates.py  test_digest.py  test_explanation.py  test_feasibility.py  test_forecast.py  test_interpreter.py  test_launchd.py  test_llm_ollama.py  test_local_time.py  test_planner.py  test_portable_runtime_fixtures.py  test_queue_recovery.py  test_recovery.py  test_recurrence.py  test_reminders.py  test_scheduler.py  test_spine.py  test_store.py  test_telegram.py  test_temporal.py  test_undo.py
(+32 files in other folders)
